--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,15 @@
         <div class="header1">
             <table>
                 <tr>
-                    <th><a href="/home_page.html" class="links">Home</a></th>
-                    <th><a href="/about_me.html" class="links">About Me</a></th>
+                    <th><a href="index.html" class="links">Home</a></th>
+                    <th><a href="about_me.html" class="links">About Me</a></th>
                     <th>
-                        <a href="home_page.html">
+                        <a href="index.html">
                             <img src="images/logo.png" width="121" height="74">
                         </a>
                     </th>
-                    <th><a href="/code_samples.html" class="links">Code Samples</a></th>
-                    <th><a href="/contact.html" class="links">Contact</a></th>
+                    <th><a href="code_samples.html" class="links">Code Samples</a></th>
+                    <th><a href="contact.html" class="links">Contact</a></th>
                 </tr>
             </table>
         </div>
@@ -28,7 +28,7 @@
             <td>
                 <h3>Email</h3>
                 <p>
-                    <a href="home_page.html">
+                    <a href="index.html">
                         <img src="images/email.png" width="75" height="75">
                     </a>
                 </p>
@@ -37,7 +37,7 @@
             <td>
                 <h3>Facebook</h3>
                 <p>
-                    <a href="home_page.html">
+                    <a href="index.html">
                         <img src="images/facebook.png" width="75" height="75">
                     </a>
                 </p>
@@ -46,7 +46,7 @@
             <td>
                 <h3>LinkedIn</h3>
                 <p>
-                    <a href="home_page.html">
+                    <a href="index.html">
                         <img src="images/linkedin.png" width="75" height="75">
                     </a>
                 </p>
