--- a/code_samples.html
+++ b/code_samples.html
@@ -9,15 +9,15 @@
         <div class="header1">
             <table>
                 <tr>
-                    <th><a href="/home_page.html" class="links">Home</a></th>
-                    <th><a href="/about_me.html" class="links">About Me</a></th>
+                    <th><a href="index.html" class="links">Home</a></th>
+                    <th><a href="about_me.html" class="links">About Me</a></th>
                     <th>
-                        <a href="home_page.html">
+                        <a href="index.html">
                             <img src="images/logo.png" width="121" height="74">
                         </a>
                     </th>
-                    <th><a href="/code_samples.html" class="links">Code Samples</a></th>
-                    <th><a href="/contact.html" class="links">Contact</a></th>
+                    <th><a href="code_samples.html" class="links">Code Samples</a></th>
+                    <th><a href="contact.html" class="links">Contact</a></th>
                 </tr>
             </table>
         </div>
