--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <div class="header1">
             <table>
                 <tr>
-                    <th><a href="/home_page.html" class="links">Home</a></th>
-                    <th><a href="/about_me.html" class="links">About Me</a></th>
+                    <th><a href="index.html" class="links">Home</a></th>
+                    <th><a href="about_me.html" class="links">About Me</a></th>
                     <th>
-                        <a href="home_page.html">
+                        <a href="index.html">
                             <img src="images/logo.png" width="121" height="74">
                         </a>
                     </th>
-                    <th><a href="/code_samples.html" class="links">Code Samples</a></th>
-                    <th><a href="/contact.html" class="links">Contact</a></th>
+                    <th><a href="code_samples.html" class="links">Code Samples</a></th>
+                    <th><a href="contact.html" class="links">Contact</a></th>
                 </tr>
             </table>
         </div>
@@ -41,9 +41,9 @@
             </td>
         </tr>
         <tr>
-            <td><p><a href="/home_page.html" class="links">Read My Blog</a></p></td>
-            <td><p><a href="/home_page.html" class="links">View My Themes</a></p></td>
-            <td><p><a href="/home_page.html" class="links">Subscribe Via Email</a></p></td>
+            <td><p><a href="index.html" class="links">Read My Blog</a></p></td>
+            <td><p><a href="index.html" class="links">View My Themes</a></p></td>
+            <td><p><a href="index.html" class="links">Subscribe Via Email</a></p></td>
         </tr>
     </table>
     <div class="wrap">
