fixed link to styles

--- a/about_me.html
+++ b/about_me.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>About Me</title>
-    <link rel=StyleSheet href="style.css" type="text/css" media=screen>
+    <link rel=stylesheet href="style.css" type="text/css" media=screen>
 </head>
 <body>
     <header>
