--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <!--http://icons.mysitemyway.com/matte-white-square-icons-social-media-logos/-->
 <head>
     <title>Contact</title>
-    <link rel=StyleSheet href="style.css" type="text/css" media=screen>
+    <link rel=stylesheet href="style.css" type="text/css" media=screen>
 </head>
 <body>
     <header>
