--- a/code_samples.html
+++ b/code_samples.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Code Samples</title>
-    <link rel=StyleSheet href="style.css" type="text/css" media=screen>
+    <link rel=stylesheet href="style.css" type="text/css" media=screen>
 </head>
 <body>
     <header>
