--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--http://www.designbolts.com/2012/11/26/25-free-simple-black-seamless-patterns-for-website-backgrounds/-->
 <head>
     <title>Home Page</title>
-    <link rel=StyleSheet href="style.css" type="text/css" media=screen>
+    <link rel=stylesheet href="style.css" type="text/css" media=screen>
 </head>
 <body>
     <header>
