second try to fix link to styles

--- a/code_samples.html
+++ b/code_samples.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Code Samples</title>
+    <title>Austin Klein</title>
+    <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
 </head>
 <body>
