--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!--http://icons.mysitemyway.com/matte-white-square-icons-social-media-logos/-->
 <head>
-    <title>Contact</title>
+    <title>Austin Klein</title>
+    <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
 </head>
 <body>
