--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!--http://www.designbolts.com/2012/11/26/25-free-simple-black-seamless-patterns-for-website-backgrounds/-->
 <head>
-    <title>Home Page</title>
+
+    <title>Austin Klein</title>
+    <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
 </head>
 <body>
