--- a/index.html
+++ b/index.html
@@ -2,139 +2,150 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!--http://www.designbolts.com/2012/11/26/25-free-simple-black-seamless-patterns-for-website-backgrounds/-->
 <head>
-
     <title>Austin Klein</title>
+    <link rel="icon" href="images/circle_favicon.ico" type="image/x-icon">
     <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
     <script type="text/javascript" src="jquery.js"></script>
     <script src="jquery.stellar.js"></script>
 </head>
 <body>
-    <header id="header1">
-        <ul>
-            <li><a href="index.html" class="links">Home</a></li>
-            <li><a href="about_me.html" class="links">About Me</a></li>
-            <li>
-                <a href="index.html">
-                    <img src="images/logo.png" width="121" height="74">
-                </a>
-            </li>
-            <li><a href="code_samples.html" class="links">Code Samples</a></li>
-            <li><a href="contact.html" class="links">Contact</a></li>
-        </ul>
-    </header>
-    <div class="wrap">
-        <div id="section1">
-            <div class="content">
-                <h3 class="paragraph">Writing</h3>
-                <br />
-                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
-                <br />
-                <p class="paragraph"><a href="index.html" class="links">Read My Blog</a></p>
-            </div>
-            <div class="content">
-                <h3 class="paragraph">Development</h3>
-                <br />
-                <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
-                <br />
-                <p class="paragraph"><a href="index.html" class="links">View My Themes</a></p>
-            </div>
-            <div class="content">
-                <h3 class="paragraph">Newsletter</h3>
-                <br />
-                <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, et luctus eros vehicula.</p>
-                <br />
-                <p class="paragraph"><a href="index.html" class="links">Subscribe Via Email</a></p>
+    <div class="god_wrap">
+        <!--
+        <div class="rightside_wrap">
+            <div class="rightside_section">
+                <script type="text/javascript">
+                    $(window).scroll(function () {
+                        if ($(window).width > 1134) {
+                            //begin to scroll
+                            var right = $(rightside_wrap);
+                            right.css('width', relative);
+                        } else {
+                            //lock it back into place
+                            var right = $(rightside_wrap);
+                            right.css('width', 0);
+                        }
+                    });
+                </script>
             </div>
         </div>
-    </div>
-    <div class="wrap">
-        <div id="section1">
-            <img src="images/lambo.png" width="1000" height="274">
+        -->
+        <div class="middle_wrap">
+            <header id="header1">
+                <ul>
+                    <li><a href="index.html" class="links">Home</a></li>
+                    <li><a href="about_me.html" class="links">About Me</a></li>
+                    <li>
+                        <a href="index.html">
+                            <img src="images/logo.png" width="121" height="74">
+                        </a>
+                    </li>
+                    <li><a href="code_samples.html" class="links">Code Samples</a></li>
+                    <li><a href="contact.html" class="links">Contact</a></li>
+                </ul>
+            </header>
+            <div class="content_wrap">
+                <div id="section1">
+                    <div class="content">
+                        <h3 class="paragraph">Writing</h3>
+                        <br />
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
+                        <br />
+                        <p class="paragraph"><a href="index.html" class="links">Read My Blog</a></p>
+                    </div>
+                    <div class="content">
+                        <h3 class="paragraph">Development</h3>
+                        <br />
+                        <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
+                        <br />
+                        <p class="paragraph"><a href="index.html" class="links">View My Themes</a></p>
+                    </div>
+                    <div class="content">
+                        <h3 class="paragraph">Newsletter</h3>
+                        <br />
+                        <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, eros vehicula.</p>
+                        <br />
+                        <p class="paragraph"><a href="index.html" class="links">Subscribe Via Email</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="wrap">
+                <div id="section1">
+                    <img id="jpg" src="images/lambo.png" height="350">
+                </div>
+            </div>
+            <div class="wrap">
+                <div id="section1">
+                    <div class="content">
+                        <h3 class="paragraph">Writing</h3>
+                        <br />
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
+                        <br />
+                        <p class="paragraph"><a href="index.html" class="links">Read My Blog</a></p>
+                    </div>
+                    <div class="content">
+                        <h3 class="paragraph">Development</h3>
+                        <br />
+                        <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
+                        <br />
+                        <p class="paragraph"><a href="index.html" class="links">View My Themes</a></p>
+                    </div>
+                    <div class="content">
+                        <h3 class="paragraph">Newsletter</h3>
+                        <br />
+                        <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, eros vehicula.</p>
+                        <br />
+                        <p class="paragraph"><a href="index.html" class="links">Subscribe Via Email</a></p>
+                    </div>
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                </div>
+            </div>
+            <!--
+        <div data-stellar-ratio="5">
+            <div class="header1">
+                <img src="images/logo.png" width="121" height="74">
+                <script>
+                    $(window).stellar({
+                    // Refreshes parallax content on window load and resize
+                    responsive: false,
+                    scrollProperty: 'transform'
+                    });
+                </script>
+            </div>
         </div>
-    </div>
-    <div class="wrap">
-        <div id="section1">
-            <div class="content">
-                <h3 class="paragraph">Writing</h3>
-                <br />
-                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
-                <br />
-                <p class="paragraph"><a href="index.html" class="links">Read My Blog</a></p>
-            </div>
-            <div class="content">
-                <h3 class="paragraph">Development</h3>
-                <br />
-                <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
-                <br />
-                <p class="paragraph"><a href="index.html" class="links">View My Themes</a></p>
-            </div>
-            <div class="content">
-                <h3 class="paragraph">Newsletter</h3>
-                <br />
-                <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, et luctus eros vehicula.</p>
-                <br />
-                <p class="paragraph"><a href="index.html" class="links">Subscribe Via Email</a></p>
-            </div>
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
+        <div class="footer_wrap">
+            <footer>
+                <div class="header1">Austin Klein</div>
+            </footer>
         </div>
-    </div>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <!--
-    <div data-stellar-ratio="5">
-        <div class="header1">
-            <img src="images/logo.png" width="121" height="74">
-            <script>
-                $(window).stellar({
-                // Refreshes parallax content on window load and resize
-                responsive: false,
-                scrollProperty: 'transform'
+        <script type="text/javascript">
+            (function () {
+                var a = document.body,
+                    e = document.documentElement;
+                $(window).unbind("scroll").scroll(function () {
+                    a.style.backgroundPosition = "0px " + -(Math.max(e.scrollTop, a.scrollTop) / 7) + "px";
                 });
-            </script>
+            })();
+        </script>
+
+        <script type="text/javascript" src="{{STATIC_URL}}js/jquery.scrolling-parallax.js">
+
+        </script>
+        -->
         </div>
     </div>
-    <div class="footer_wrap">
-        <footer>
-            <div class="header1">Austin Klein</div>
-        </footer>
-    </div>
-    <script type="text/javascript">
-        (function () {
-            var a = document.body,
-                e = document.documentElement;
-            $(window).unbind("scroll").scroll(function () {
-                a.style.backgroundPosition = "0px " + -(Math.max(e.scrollTop, a.scrollTop) / 7) + "px";
-            });
-        })();
-    </script>
-
-    <script type="text/javascript" src="{{STATIC_URL}}js/jquery.scrolling-parallax.js">
-
-    </script>
-    -->
 </body>
 </html>
