--- a/code_samples.html
+++ b/code_samples.html
@@ -2,31 +2,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Austin Klein</title>
+    <link rel="icon" href="images/circle_favicon.ico" type="image/x-icon">
     <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script src="jquery.stellar.js"></script>
 </head>
 <body>
-    <header>
-        <div class="header1">
-            <table>
-                <tr>
-                    <th><a href="index.html" class="links">Home</a></th>
-                    <th><a href="about_me.html" class="links">About Me</a></th>
-                    <th>
+    <div class="god_wrap">
+        <div class="middle_wrap">
+            <header id="header1">
+                <ul>
+                    <li><a href="index.html" class="links">Home</a></li>
+                    <li><a href="about_me.html" class="links">About Me</a></li>
+                    <li>
                         <a href="index.html">
                             <img src="images/logo.png" width="121" height="74">
                         </a>
-                    </th>
-                    <th><a href="code_samples.html" class="links">Code Samples</a></th>
-                    <th><a href="contact.html" class="links">Contact</a></th>
-                </tr>
-            </table>
+                    </li>
+                    <li><a href="code_samples.html" class="links">Code Samples</a></li>
+                    <li><a href="contact.html" class="links">Contact</a></li>
+                </ul>
+            </header>
+            <div class="wrap">
+                <footer>
+                    <div class="header1">Austin Klein</div>
+                </footer>
+            </div>
         </div>
-    </header>
-    <div class="wrap">
-        <footer>
-            <div class="header1">Austin Klein</div>
-        </footer>
     </div>
 </body>
 </html>
