--- a/contact.html
+++ b/contact.html
@@ -3,61 +3,66 @@
 <!--http://icons.mysitemyway.com/matte-white-square-icons-social-media-logos/-->
 <head>
     <title>Austin Klein</title>
+    <link rel="icon" href="images/circle_favicon.ico" type="image/x-icon">
     <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script src="jquery.stellar.js"></script>
 </head>
 <body>
-    <header>
-        <div class="header1">
-            <table>
-                <tr>
-                    <th><a href="index.html" class="links">Home</a></th>
-                    <th><a href="about_me.html" class="links">About Me</a></th>
-                    <th>
+    <div class="god_wrap">
+        <div class="middle_wrap">
+            <header id="header1">
+                <ul>
+                    <li><a href="index.html" class="links">Home</a></li>
+                    <li><a href="about_me.html" class="links">About Me</a></li>
+                    <li>
                         <a href="index.html">
                             <img src="images/logo.png" width="121" height="74">
                         </a>
-                    </th>
-                    <th><a href="code_samples.html" class="links">Code Samples</a></th>
-                    <th><a href="contact.html" class="links">Contact</a></th>
-                </tr>
-            </table>
+                    </li>
+                    <li><a href="code_samples.html" class="links">Code Samples</a></li>
+                    <li><a href="contact.html" class="links">Contact</a></li>
+                </ul>
+            </header>
+            <div class="content_wrap">
+                <div id="section1">
+                    <div class="contact_content">
+                        <p class="paragraph">
+                            <a href="mailto:amk5401@rit.edu">
+                                <img src="images/email.png" width="150" height="150">
+                            </a>
+                        </p>
+                    </div>
+                    <div class="contact_content">
+                        <p class="paragraph">
+                            <a href="http://www.linkedin.com/pub/austin-klein/81/294/824">
+                                <img src="images/linkedin.png" width="150" height="150">
+                            </a>
+                        </p>
+                    </div>
+                    <div class="contact_content">
+                        <p class="paragraph">
+                            <a href="https://github.com/amk5401">
+                                <img src="images/github.png" width="150" height="150">
+                            </a>
+                        </p>
+                    </div>
+                    <div class="contact_content">
+                        <p class="paragraph">
+                            <a href="https://www.facebook.com/austin.klein.14">
+                                <img src="images/facebook.png" width="150" height="150">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="wrap">
+                <footer>
+                    <div class="header1">Austin Klein</div>
+                </footer>
+            </div>
         </div>
-    </header>
-    <table class="info_table">
-        <tr>
-            <td>
-                <h3>Email</h3>
-                <p>
-                    <a href="index.html">
-                        <img src="images/email.png" width="75" height="75">
-                    </a>
-                </p>
-            </td>
-
-            <td>
-                <h3>Facebook</h3>
-                <p>
-                    <a href="index.html">
-                        <img src="images/facebook.png" width="75" height="75">
-                    </a>
-                </p>
-            </td>
-
-            <td>
-                <h3>LinkedIn</h3>
-                <p>
-                    <a href="index.html">
-                        <img src="images/linkedin.png" width="75" height="75">
-                    </a>
-                </p>
-            </td>
-        </tr>
-    </table>
-    <div class="wrap">
-        <footer>
-            <div class="header1">Austin Klein</div>
-        </footer>
     </div>
 </body>
 </html>
