--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <style type="text/css"></style>
     <link rel=stylesheet href="style.css" type="text/css" media=screen>
     <script type="text/javascript" src="jquery.js"></script>
-    <script src="jquery.stellar.js"></script>
 </head>
 <body>
     <div class="god_wrap">
@@ -69,63 +68,52 @@
                     </div>
                 </div>
             </div>
-            <div class="wrap">
-                <div id="section1">
-                    <img id="jpg" src="images/lambo.png" height="350">
-                </div>
+            <div class="wrap" style="font-size:0">
+                <img id="jpg" src="images/skiing.jpg">
             </div>
             <div class="wrap">
-                <div id="section1">
-                    <div class="content">
-                        <h3 class="paragraph">Writing</h3>
-                        <br />
-                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links">Read My Blog</a></p>
-                    </div>
-                    <div class="content">
-                        <h3 class="paragraph">Development</h3>
-                        <br />
-                        <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links">View My Themes</a></p>
-                    </div>
-                    <div class="content">
-                        <h3 class="paragraph">Newsletter</h3>
-                        <br />
-                        <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, eros vehicula.</p>
-                        <br />
-                        <p class="paragraph"><a href="index.html" class="links">Subscribe Via Email</a></p>
-                    </div>
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                    <br />
-                </div>
+                <img id="jpg" src="images/rowing.jpg">
             </div>
+                <div class="wrap">
+                    <div id="section1">
+                        <div class="content">
+                            <h3 class="paragraph">Writing</h3>
+                            <br />
+                            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lobortis tempus cursus mentum.</p>
+                            <br />
+                            <p class="paragraph"><a href="index.html" class="links">Read My Blog</a></p>
+                        </div>
+                        <div class="content">
+                            <h3 class="paragraph">Development</h3>
+                            <br />
+                            <p class="paragraph">Sed adipiscing urna et neque euismod, et luctus eros vehicula. Vestibulum dapibus urna at mi porttitor condimentum.</p>
+                            <br />
+                            <p class="paragraph"><a href="index.html" class="links">View My Themes</a></p>
+                        </div>
+                        <div class="content">
+                            <h3 class="paragraph">Newsletter</h3>
+                            <br />
+                            <p class="paragraph">Aliquam porttitor vel sapien id pharetra. Mauris id mauris eleifend, dignissim lacus id, tempus mauris, eros vehicula.</p>
+                            <br />
+                            <p class="paragraph"><a href="index.html" class="links">Subscribe Via Email</a></p>
+                        </div>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                    </div>
+                </div>
             <!--
-        <div data-stellar-ratio="5">
-            <div class="header1">
-                <img src="images/logo.png" width="121" height="74">
-                <script>
-                    $(window).stellar({
-                    // Refreshes parallax content on window load and resize
-                    responsive: false,
-                    scrollProperty: 'transform'
-                    });
-                </script>
-            </div>
-        </div>
         <div class="footer_wrap">
             <footer>
                 <div class="header1">Austin Klein</div>
